# resquator.PL_estimator

./: .rtd-environment.yml  LICENSE.rst  Makefile  README.rst  environment-arm.yml  environment.yml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
bet-app/: app.py
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat  project_organization.rst
docs/getting_started/: ENVIRONMENT.rst  INSTALL.rst  getting_started.rst
notebooks/features/: compute_trend.ipynb  features_engineering.ipynb
notebooks/modeling/: baseline.ipynb  polynomial-regression.ipynb
notebooks/scrapping/: betexplorer_scrapping.ipynb
src/data/: games_2000_2022.csv  modeling_v1_data.csv  transformed_dataset_v1.csv
src/urls/: urls.csv
