[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1


[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
project_name     = resquator.PL_estimator
package_name     = src
description      = Premiere League game estimator on odds.
long_description = This project has a scope to create an estimator based on past results and odd and deploy a web interface.
author_name      = theResquator
author_email     = resquatordaryl@gmail.com
license          = MIT
github_project   = https://github.com/resquator/resquator.PL_estimator
version          = 0.0.dev0
url              = https://github.com/resquator/resquator.PL_estimator
